--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -1793,4 +1793,18 @@ Lo scopo del progetto era quello di equalizzare un'immagine con il metodo dell'i
 \section{Conclusioni}
 Write somenthing here
 
+
++-------------------------+------+-------+-----------+-------+
+|        Site Type        | Used | Fixed | Available | Util% |
++-------------------------+------+-------+-----------+-------+
+| Slice LUTs              |  370 |     0 |      8000 |  4.63 |
+|   LUT as Logic          |  370 |     0 |      8000 |  4.63 |
+|   LUT as Memory         |    0 |     0 |      5000 |  0.00 |
+| Slice Registers         |  268 |     0 |     16000 |  1.68 |
+|   Register as Flip Flop |  237 |     0 |     16000 |  1.48 |
+|   Register as Latch     |   31 |     0 |     16000 |  0.19 |
+| F7 Muxes                |    0 |     0 |      7300 |  0.00 |
+| F8 Muxes                |    0 |     0 |      3650 |  0.00 |
++-------------------------+------+-------+-----------+-------+
+
 \end{document}
